--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230918215821">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230919121534">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -735,9 +735,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image1.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image1-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image1.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image1-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -749,9 +750,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image2.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image2-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image2.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image2-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -763,9 +765,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image3.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image3-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image3.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image3-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -777,9 +780,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image4.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image4-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image4.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image4-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -791,9 +795,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image5.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image5-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image5.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image5-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -805,9 +810,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image3.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image3-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image3.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image3-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -819,9 +825,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image4.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image4-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image4.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image4-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -833,9 +840,10 @@
                                 <a href="#" class="goods-main__item">
                                     <div class="goods-main__image">
                                         <picture>
-                                            <source data-srcset="img/products/image4.webp" srcset="img/plug.png"
+                                            <source data-srcset="img/products/image4-small.webp" srcset="img/plug.png"
                                                 type="image/webp">
-                                            <img data-src="img/products/image4.png" src="img/plug.png" alt="Image">
+                                            <img data-src="img/products/image4-small.png" src="img/plug.png"
+                                                alt="Image">
                                         </picture>
                                     </div>
                                     <div class="goods-main__desc">
@@ -3099,7 +3107,22 @@
                     <use href="img/icons/icons.svg#close"></use>
                 </svg>
             </button>
-            <div class="viewer__image"></div>
+            <div class="viewer__slider">
+                <div class="viewer__wrapper swiper-wrapper">
+                </div>
+            </div>
+            <div class="viewer__navigation">
+                <button type="button" class="viewer__prev">
+                    <svg>
+                        <use href="img/icons/icons.svg#arrow"></use>
+                    </svg>
+                </button>
+                <button type="button" class="viewer__next">
+                    <svg>
+                        <use href="img/icons/icons.svg#arrow"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 </div>
@@ -3127,7 +3150,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230918215821"></script>
+    <script src="js/app.min.js?_v=20230919121534"></script>
 </body>
 
 </html>
