--- a/looks.html
+++ b/looks.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230918215821">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230919121534">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -4105,7 +4105,22 @@
                     <use href="img/icons/icons.svg#close"></use>
                 </svg>
             </button>
-            <div class="viewer__image"></div>
+            <div class="viewer__slider">
+                <div class="viewer__wrapper swiper-wrapper">
+                </div>
+            </div>
+            <div class="viewer__navigation">
+                <button type="button" class="viewer__prev">
+                    <svg>
+                        <use href="img/icons/icons.svg#arrow"></use>
+                    </svg>
+                </button>
+                <button type="button" class="viewer__next">
+                    <svg>
+                        <use href="img/icons/icons.svg#arrow"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 </div>
@@ -4133,7 +4148,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230918215821"></script>
+    <script src="js/app.min.js?_v=20230919121534"></script>
 </body>
 
 </html>
