--- a/category.html
+++ b/category.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230919121534">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230919134648">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -1042,6 +1042,19 @@
                                         </div>
                                     </div>
                                 </section>
+                                <div class="filter__dialog dialog-filter">
+                                    <div class="dialog-filter__container container">
+                                        <div class="dialog-filter__body">
+                                            <div class="dialog-filter__message">
+                                                Click Apply' button after all needed settings
+                                            </div>
+                                            <div class="dialog-filter__btns">
+                                                <button type="button" class="dialog-filter__apply">Apply</button>
+                                                <button type="button" class="dialog-filter__cancel">Cancel</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </aside>
@@ -2422,7 +2435,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230919121534"></script>
+    <script src="js/app.min.js?_v=20230919134648"></script>
 </body>
 
 </html>
