--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230919134648">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230919221834">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -21,7 +21,7 @@
                 </picture>
             </a>
             <div class="header__search search">
-                <div class="search__body">
+                <form action="#" class="search__body">
                     <button type="button" class="search__btn">
                         <svg>
                             <use href="img/icons/icons.svg#search"></use>
@@ -53,7 +53,7 @@
                             All
                         </div>
                     </div>
-                </div>
+                </form>
                 <button type="button" class="search__close">
                     <svg>
                         <use href="img/icons/icons.svg#close"></use>
@@ -1856,7 +1856,7 @@
                     </div>
                 </div>
                 <div class="cat-main__goods">
-                    <div class="cat-main__slider">
+                    <div class="cat-main__slider2">
                         <div class="cat-main__wrapper swiper-wrapper">
                             <div class="cat-main__slide swiper-slide">
                                 <div class="cat-main__item prod-card">
@@ -3150,7 +3150,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230919134648"></script>
+    <script src="js/app.min.js?_v=20230919221834"></script>
 </body>
 
 </html>
