--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230920104407">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230920113250">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -742,9 +742,9 @@
                                         <div class="thumbs-product__slide swiper-slide">
                                             <div class="thumbs-product__item">
                                                 <picture>
-                                                    <source data-srcset="img/products/image1.webp"
+                                                    <source data-srcset="img/products/image1-small.webp"
                                                         srcset="img/plug.png" type="image/webp">
-                                                    <img data-src="img/products/image1.png" src="img/plug.png"
+                                                    <img data-src="img/products/image1-small.png" src="img/plug.png"
                                                         alt="Image">
                                                 </picture>
                                             </div>
@@ -752,9 +752,9 @@
                                         <div class="thumbs-product__slide swiper-slide">
                                             <div class="thumbs-product__item">
                                                 <picture>
-                                                    <source data-srcset="img/products/image2.webp"
+                                                    <source data-srcset="img/products/image2-small.webp"
                                                         srcset="img/plug.png" type="image/webp">
-                                                    <img data-src="img/products/image2.png" src="img/plug.png"
+                                                    <img data-src="img/products/image2-small.png" src="img/plug.png"
                                                         alt="Image">
                                                 </picture>
                                             </div>
@@ -762,9 +762,9 @@
                                         <div class="thumbs-product__slide swiper-slide">
                                             <div class="thumbs-product__item">
                                                 <picture>
-                                                    <source data-srcset="img/products/image3.webp"
+                                                    <source data-srcset="img/products/image3-small.webp"
                                                         srcset="img/plug.png" type="image/webp">
-                                                    <img data-src="img/products/image3.png" src="img/plug.png"
+                                                    <img data-src="img/products/image3-small.png" src="img/plug.png"
                                                         alt="Image">
                                                 </picture>
                                             </div>
@@ -772,9 +772,9 @@
                                         <div class="thumbs-product__slide swiper-slide">
                                             <div class="thumbs-product__item">
                                                 <picture>
-                                                    <source data-srcset="img/products/image4.webp"
+                                                    <source data-srcset="img/products/image4-small.webp"
                                                         srcset="img/plug.png" type="image/webp">
-                                                    <img data-src="img/products/image4.png" src="img/plug.png"
+                                                    <img data-src="img/products/image4-small.png" src="img/plug.png"
                                                         alt="Image">
                                                 </picture>
                                             </div>
@@ -2189,7 +2189,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920104407"></script>
+    <script src="js/app.min.js?_v=20230920113250"></script>
 </body>
 
 </html>
