--- a/brand.html
+++ b/brand.html
@@ -723,10 +723,7 @@
                 <div class="breadcrumbs__body">
                     <a href="#" class="breadcrumbs__link">Home</a>
                     <a href="#" class="breadcrumbs__link">Brands</a>
-                    <a href="#" class="breadcrumbs__link">Barbour</a>
-                    <a href="#" class="breadcrumbs__link">International</a>
-                    <a href="#" class="breadcrumbs__link">Barbour International Jackets</a>
-                    <a href="#" class="breadcrumbs__link">Barbour International Padded jackets</a>
+                    <a href="#" class="breadcrumbs__link">Dondup</a>
                 </div>
             </div>
         </div>
@@ -772,46 +769,116 @@
                                 </section>
                                 <section class="filter__section">
                                     <h4 class="filter__title title4" data-spoller>Category</h4>
-                                    <div class="filter__block">
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Biker jackets</span> (340)
-                                            <input type="checkbox" name="category" value="Biker jackets">
+                                    <div class="filter__wrapper">
+                                        <div class="filter__block">
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Biker jackets</span> (340)
+                                                <input type="checkbox" name="category" value="Biker jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Bomber jackets</span> (1528)
+                                                <input type="checkbox" name="category" value="Bomber jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Capes and Ponchos</span> (746)
+                                                <input type="checkbox" name="category" value="Capes and Ponchos">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Cropped jackets</span> (746)
+                                                <input type="checkbox" name="category" value="Cropped jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Denim jackets</span> (1191)
+                                                <input type="checkbox" name="category" value="Denim jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Double breasted jackets</span> (525)
+                                                <input type="checkbox" name="category" value="Double breasted jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Down jackets</span> (3578)
+                                                <input type="checkbox" name="category" value="Down jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Fleece jackets</span> (245)
+                                                <input type="checkbox" name="category" value="Fleece jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Biker jackets</span> (340)
+                                                <input type="checkbox" name="category" value="Biker jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Bomber jackets</span> (1528)
+                                                <input type="checkbox" name="category" value="Bomber jackets">
+                                            </div>
                                         </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Bomber jackets</span> (1528)
-                                            <input type="checkbox" name="category" value="Bomber jackets">
+                                        <h3 class="filter__subtitle">Clothing and Accessories</h3>
+                                        <div class="filter__block">
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Biker jackets</span> (340)
+                                                <input type="checkbox" name="category" value="Biker jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Bomber jackets</span> (1528)
+                                                <input type="checkbox" name="category" value="Bomber jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Capes and Ponchos</span> (746)
+                                                <input type="checkbox" name="category" value="Capes and Ponchos">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Cropped jackets</span> (746)
+                                                <input type="checkbox" name="category" value="Cropped jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Denim jackets</span> (1191)
+                                                <input type="checkbox" name="category" value="Denim jackets">
+                                            </div>
                                         </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Capes and Ponchos</span> (746)
-                                            <input type="checkbox" name="category" value="Capes and Ponchos">
+                                        <h3 class="filter__subtitle">Footwear</h3>
+                                        <div class="filter__block">
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Biker jackets</span> (340)
+                                                <input type="checkbox" name="category" value="Biker jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Bomber jackets</span> (1528)
+                                                <input type="checkbox" name="category" value="Bomber jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Capes and Ponchos</span> (746)
+                                                <input type="checkbox" name="category" value="Capes and Ponchos">
+                                            </div>
                                         </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Cropped jackets</span> (746)
-                                            <input type="checkbox" name="category" value="Cropped jackets">
+                                        <h3 class="filter__subtitle">Bags, backpacks and wallets</h3>
+                                        <div class="filter__block">
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Biker jackets</span> (340)
+                                                <input type="checkbox" name="category" value="Biker jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Bomber jackets</span> (1528)
+                                                <input type="checkbox" name="category" value="Bomber jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Capes and Ponchos</span> (746)
+                                                <input type="checkbox" name="category" value="Capes and Ponchos">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Cropped jackets</span> (746)
+                                                <input type="checkbox" name="category" value="Cropped jackets">
+                                            </div>
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Denim jackets</span> (1191)
+                                                <input type="checkbox" name="category" value="Denim jackets">
+                                            </div>
                                         </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Denim jackets</span> (1191)
-                                            <input type="checkbox" name="category" value="Denim jackets">
-                                        </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Double breasted jackets</span> (525)
-                                            <input type="checkbox" name="category" value="Double breasted jackets">
-                                        </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Down jackets</span> (3578)
-                                            <input type="checkbox" name="category" value="Down jackets">
-                                        </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Fleece jackets</span> (245)
-                                            <input type="checkbox" name="category" value="Fleece jackets">
-                                        </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Biker jackets</span> (340)
-                                            <input type="checkbox" name="category" value="Biker jackets">
-                                        </div>
-                                        <div class="filter__checkbox checkbox">
-                                            <span>Bomber jackets</span> (1528)
-                                            <input type="checkbox" name="category" value="Bomber jackets">
+                                        <h3 class="filter__subtitle">Swimwear</h3>
+                                        <div class="filter__block">
+                                            <div class="filter__checkbox checkbox">
+                                                <span>Biker jackets</span> (340)
+                                                <input type="checkbox" name="category" value="Biker jackets">
+                                            </div>
                                         </div>
                                     </div>
                                 </section>
@@ -1062,17 +1129,9 @@
                         <div class="category__block content__block">
                             <div class="category__main main-category">
                                 <div class="main-category__body">
-                                    <div class="main-category__header">
-                                        <h1 class="main-category__title title4">
-                                            Men's double double breasted houndstooth breasted houndstooth jackets
-                                        </h1>
-                                        <a href="#" class="main-category__btn btn-gradient">
-                                            <svg>
-                                                <use href="img/icons/icons.svg#image"></use>
-                                            </svg>
-                                            Men's double breasted houndstooth jackets <span>outfits</span>
-                                        </a>
-                                    </div>
+                                    <h1 class="main-category__brand-title">
+                                        Dondup
+                                    </h1>
                                     <p class="main-category__desc">
                                         Get ready for summer with our latest collection of lightweight dresses.
                                         Featuring playful prints and bold colors, these dresses are perfect for staying
