--- a/pages.html
+++ b/pages.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230920104407">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230920121630">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -28,6 +28,7 @@
     <a href="index.html">Main</a>
     <a href="product.html">Product</a>
     <a href="category.html">Category</a>
+    <a href="brand.html">Brand</a>
     <a href="looks.html">Looks</a>
     <a href="look.html">One look</a>
     <a href="brands.html">Brands</a>
