--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230920124934">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230920131344">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -34,19 +34,19 @@
                         <div class="options-container">
                             <div class="option">
                                 <input type="radio" id="all" name="search" value="all">
-                                <label for="for all">All</label>
+                                <label for="all">All</label>
                             </div>
                             <div class="option">
                                 <input type="radio" id="women" name="search" value="women">
-                                <label for="for women">Women</label>
+                                <label for="women">Women</label>
                             </div>
                             <div class="option">
                                 <input type="radio" id="men" name="search" value="men">
-                                <label for="for men">Men</label>
+                                <label for="men">Men</label>
                             </div>
                             <div class="option">
                                 <input type="radio" id="brands" name="search" value="brands">
-                                <label for="for brands">Brands</label>
+                                <label for="brands">Brands</label>
                             </div>
                         </div>
                         <div class="selected">
@@ -654,7 +654,7 @@
                             <div class="options-container">
                                 <div class="option">
                                     <input type="radio" id="dollar" name="currency" value="dollar">
-                                    <label for="for dollar">
+                                    <label for="dollar">
                                         <svg>
                                             <use href="img/icons/icons.svg#dollar"></use>
                                         </svg>
@@ -662,7 +662,7 @@
                                 </div>
                                 <div class="option">
                                     <input type="radio" id="euro" name="currency" value="euro">
-                                    <label for="for euro">
+                                    <label for="euro">
                                         <svg>
                                             <use href="img/icons/icons.svg#dollar"></use>
                                         </svg>
@@ -670,7 +670,7 @@
                                 </div>
                                 <div class="option">
                                     <input type="radio" id="uah" name="currency" value="uah">
-                                    <label for="for uah">
+                                    <label for="uah">
                                         <svg>
                                             <use href="img/icons/icons.svg#dollar"></use>
                                         </svg>
@@ -1104,7 +1104,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920124934"></script>
+    <script src="js/app.min.js?_v=20230920131344"></script>
 </body>
 
 </html>
