--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/main.min.css?_v=20230920130852">
+    <link rel="stylesheet" href="css/main.min.css?_v=20230920131344">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -654,7 +654,7 @@
                             <div class="options-container">
                                 <div class="option">
                                     <input type="radio" id="dollar" name="currency" value="dollar">
-                                    <label for="for dollar">
+                                    <label for="dollar">
                                         <svg>
                                             <use href="img/icons/icons.svg#dollar"></use>
                                         </svg>
@@ -662,7 +662,7 @@
                                 </div>
                                 <div class="option">
                                     <input type="radio" id="euro" name="currency" value="euro">
-                                    <label for="for euro">
+                                    <label for="euro">
                                         <svg>
                                             <use href="img/icons/icons.svg#dollar"></use>
                                         </svg>
@@ -670,7 +670,7 @@
                                 </div>
                                 <div class="option">
                                     <input type="radio" id="uah" name="currency" value="uah">
-                                    <label for="for uah">
+                                    <label for="uah">
                                         <svg>
                                             <use href="img/icons/icons.svg#dollar"></use>
                                         </svg>
@@ -3150,7 +3150,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920130852"></script>
+    <script src="js/app.min.js?_v=20230920131344"></script>
 </body>
 
 </html>
